--- a/ionic-mobile/elektron/www/templates/component.html
+++ b/ionic-mobile/elektron/www/templates/component.html
@@ -8,7 +8,7 @@
                    <span>Detalle de componente</span>
         </ion-toggle>
       </div>
-      <div class="item item-divider text-center">
+      <div class="text-color-tom item item-divider text-center">
         <span><b>{{component_server.label}}</b></span>
       </div>
       <div class="graphic-item item-text-wrap">
@@ -72,11 +72,11 @@
         <span>Configurar componente por</span>
       </div>
       <div class="item">
-        <div class="button-bar">
-          <a ui-sref="app.tasks" class="button button-dark icon ion-gear-a">
+        <div class="button-bar task-font">
+          <a ui-sref="app.tasks" class="button button-color-tom button-dark icon ion-gear-a">
             Tiempo
           </a>
-          <a ui-sref="app.tasks" class="button button-dark icon ion-gear-a">
+          <a ui-sref="app.tasks" class="button button-color-tom button-dark icon ion-gear-a">
             Consumo
           </a>
         </div>
