--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -12,8 +12,8 @@
               <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced"><i class="icon ion-power"></i></span>
               <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive"><i class="icon ion-power"></i></span>
             </div>
-            <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-dark">
-              <i class="icon ion-chevron-right"></i>
+            <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-light">
+              <i class="icon-color-tom icon ion-chevron-right"></i>
             </a>
           </div>
       </div>
