--- a/ionic-mobile/elektron/www/templates/login.html
+++ b/ionic-mobile/elektron/www/templates/login.html
@@ -12,12 +12,12 @@
         <span>Iniciar sesión</span>
       </div>
 
-			<div class="list list-inset removePM">
+			<div class="login-block-tom list list-inset removePM">
 			  <label class="item item-input"><input type="text" ng-model="user.username" placeholder="Usuario o Email" > </label>
 			  <label class="item item-input"><input type="password" ng-model="user.password" placeholder="Contraseña" > </label>
 			</div>
 
-			<div class="loginButton">
+			<div class="login-button-div loginButton">
         <button class="button button-block button-balanced" ng-click="login(user);" > Ingresar </button>
       </div>
 	  </div>
