--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -2,6 +2,8 @@
 /* CSS especifico de la aplicacion de elektron */
 
 
+/* ---- LOGIN ------*/
+
 .login {
   margin-top: 70px;
 }
@@ -15,6 +17,25 @@
   text-transform: uppercase;
   font-size: 1em;
 }
+
+.login-block-tom {
+  background-color: inherit;
+  margin-left: 20px !important;
+  margin-right: 20px !important;
+}
+
+.login-block-tom label {
+  margin-bottom: 3px;
+}
+
+.login-button-div {
+  margin-top: 25px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+/* ---- /LOGIN ------*/
+
 
 .popup-buttons button:nth-child(2){
   background-color: #444;
@@ -137,8 +158,9 @@
 }
 
 .logout-spinner{
+  color: #38444e !important;
   text-align: center;
-  margin-top: 40px;
+  margin-top: 70px;
 }
 
 .button-paginado {
@@ -186,6 +208,7 @@
   /*right: inherit !important;*/
   /*margin-right: 8px;*/
   margin-left: 10px;
+  right: 16px !important;
 }
 
 .badge-task {
@@ -218,6 +241,14 @@
 .task-float-right {
   float: right;
   margin-left: 5px;
+}
+
+.task-margin-buttons {
+  margin-top: -15px;
+}
+
+.task-margin-buttons-2 {
+  margin-top: -5px;
 }
 
 .task-float-right-first {
@@ -292,7 +323,13 @@
   font-size: 0.9em;
 }
 
+.item-statistics-select {
+  font-size: 14px !important;
+}
 
+.button-table-tom {
+  font-weight: bold;
+}
 
 /* ---- /Statistics ---- */
 
@@ -308,6 +345,7 @@
   margin: 4px;
   padding: 0 8px !important;
   border-radius: 8px !important;
+  border-color: #dedede !important;
 }
 
 .button-bar-history-a1 {
@@ -315,10 +353,11 @@
 
 .button-color-tom {
   background-color: #38444e !important;
+  border-color: #38444e !important;
 }
 
 .icon-color-tom, .text-color-tom {
-  color:#38444e;
+  color:#38444e !important;
 }
 
 .button-bar-history-a2 {
@@ -331,15 +370,13 @@
   font-size: 0.9em;
 }
 
-.button-bar-history-a4 {
-}
-
 .button-bar-history select {
   min-width: 21%;
   padding: 0 8px !important;
   margin: 4px;
   font-weight: bold;
   border-radius: 8px !important;
+  border-color: #dedede !important;
 }
 
 
