--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Elektron" hide-back-button="true">
+<ion-view view-title="Inicio" hide-back-button="true">
 
     <ion-content>
       <div class="card">
@@ -74,18 +74,18 @@
               </div>
               <div class="item">
                 <span>Costo aproximado: </span>
-                <span class="badge badge-calm badge-letter"> $ {{ general_data.total_tax | number : 0 }} </span>
+                <span class="badge badge-balanced badge-letter"> $ {{ general_data.total_tax | number : 0 }} </span>
               </div>
               <div class="item">
                 <span>Contaminacion Co2: </span>
-                <span class="badge badge-energized badge-letter"> {{ general_data.total_co2 | number : 0 }} Kg </span>
+                <span class="badge badge-calm badge-letter"> {{ general_data.total_co2 | number : 0 }} Kg </span>
               </div>
         </div>
         <div class="list">
           <div class="row item item-divider">
             <div class="col col-50 title-components"><b>Componentes</b></div>
             <div class="col col-50">
-              <a ui-sref="app.components" class="button-dash button button-small button-dark">Ver todos</a>
+              <a ui-sref="app.components" class="button-dash button button-small button-light">Ver todos</a>
             </div>
           </div>
           <div class="item" ng-repeat="component in components_server | limitTo:quantity">
@@ -96,7 +96,7 @@
           <div class="row item item-divider">
             <div class="col col-50 title-components"><b>Estadisticas</b></div>
             <div class="col col-50">
-              <a ui-sref="app.statistics" class="button-dash button button-small button-dark">Ver estadisticas</a>
+              <a ui-sref="app.statistics" class="button-dash button button-small button-light">Ver estadisticas</a>
             </div>
           </div>
         </div>
