apk mejorada y unos estilos

--- a/ionic-mobile/elektron/www/templates/logout.html
+++ b/ionic-mobile/elektron/www/templates/logout.html
@@ -1,15 +1,13 @@
 <ion-view view-title="Cerrando sesion" class="loginBg" hide-nav-bar="true" >
-
   <ion-content class="padding">
-
-  <div class="row responsive-sm padding remvoeBP">
-	  <div class="col">
-			<div class="app-logo"><img class="logo-img" src="img/elektron.png"></div>
-      <div class="logout-spinner">
-        <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
-        <div class="logout-spinner-text">Cerrando sesión</div>
-      </div>
-	  </div>
-  </div>
+    <div class="login row responsive-sm padding remvoeBP">
+  	  <div class="col">
+  			<div class="app-logo"><img class="logo-img" src="img/elektron.png"></div>
+        <div class="logout-spinner">
+          <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
+          <div class="logout-spinner-text">Cerrando sesión</div>
+        </div>
+  	  </div>
+    </div>
   </ion-content>
 </ion-view>
