--- a/ionic-mobile/elektron/www/templates/statistics.html
+++ b/ionic-mobile/elektron/www/templates/statistics.html
@@ -21,8 +21,8 @@
 
         <div class="item item-divider">
             <b class="text-color-tom">Componente:</b> <span class="font-size-stat-comp">{{component.device.label}}</span>
-            <span ng-if="component.device.devicestate.name == 'on'" class="badge-component badge badge-balanced"><i class="icon ion-power"></i></span>
-            <span ng-if="component.device.devicestate.name == 'off'" class="badge-component badge badge-assertive"><i class="icon ion-power"></i></span>
+            <span ng-if="component.device.devicestate.name == 'on'" class="badge-statistics badge badge-balanced"><i class="icon ion-power"></i></span>
+            <span ng-if="component.device.devicestate.name == 'off'" class="badge-statistics badge badge-assertive"><i class="icon ion-power"></i></span>
         </div>
             <div class="item item-padding-stats">
                 <div class="row">
