--- a/ionic-mobile/elektron/www/css/elektron.css
+++ b/ionic-mobile/elektron/www/css/elektron.css
@@ -208,6 +208,14 @@
   /*right: inherit !important;*/
   /*margin-right: 8px;*/
   margin-left: 10px;
+}
+
+.badge-statistics {
+  display: inline !important;
+  font-size: 0.7em;
+  /*right: inherit !important;*/
+  /*margin-right: 8px;*/
+  margin-left: 10px;
   right: 16px !important;
 }
 
