solved problemas de horarios

--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -76,7 +76,7 @@
                       <div class="text-center">Datos desde</div>
                   </div>
                   <div class="boxes-body">
-                      <div class="text-center">{{configuration.dateFrom}} a las {{configuration.timeFrom}}</div>
+                      <div class="text-center">{{dateF}} a las {{configuration.timeFrom}}</div>
                   </div>
                 </a>
               </div>
@@ -86,7 +86,7 @@
                       <div class="text-center">Datos hasta</div>
                   </div>
                   <div class="boxes-body">
-                      <div class="text-center">{{configuration.dateTo}} a las {{configuration.timeTo}}</div>
+                      <div class="text-center">{{dateT}} a las {{configuration.timeTo}}</div>
                   </div>
                 </a>
               </div>
