estilo del dash

--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -25,7 +25,7 @@
       <div class="card">
           <div class="item">
             <label class="item item-input item-select">
-              <div class="input-label">
+              <div class="input-label letter-9">
                 Componente
               </div>
               <select ng-options="component.label for component in components_server_enabled"
@@ -48,7 +48,7 @@
           </div>
       </div>
       <div class="card">
-        <div class="list">
+        <div class="list list-dash">
               <div class="row item item-divider">
                 <div class="col col-50 title-components"><b>Resumen de datos</b></div>
               </div>
@@ -81,7 +81,7 @@
                 <span class="badge badge-calm badge-letter"> {{ general_data.total_co2 | number : 0 }} Kg </span>
               </div>
         </div>
-        <div class="list">
+        <div class="list list-dash">
           <div class="row item item-divider">
             <div class="col col-50 title-components"><b>Componentes</b></div>
             <div class="col col-50">
