--- a/ionic-mobile/elektron/www/templates/component.html
+++ b/ionic-mobile/elektron/www/templates/component.html
@@ -64,8 +64,12 @@
       </ion-toggle>
       <div class="item">
         <span class=""><b class="badge-letter">Enchufado</b>:
-          <span ng-if="component_server.pluged == true" class="badge badge-letter">enchufado</span>
-          <span ng-if="component_server.pluged == false" class="badge badge-letter">desenchufado</span>
+          <span ng-if="component_server.pluged == true" class="badge badge-letter">
+            <b class="balanced"s>enchufado</b>
+          </span>
+          <span ng-if="component_server.pluged == false" class="badge badge-letter">
+            <b class="assertive">desenchufado</b>
+          </span>
         </span>
       </div>
       <div class="item item-divider text-center">
