cambios en el statistics de ionic

--- a/ionic-mobile/elektron/www/templates/statistics.html
+++ b/ionic-mobile/elektron/www/templates/statistics.html
@@ -128,7 +128,7 @@
           <div ng-show="barselected == true" class="item item-divider">
               <b class="letter-9 text-color-tom">Valores en gráfico de barras</b>
           </div>
-          <div ng-show="barselected == true" class="item">
+          <div ng-show="barselected == true" class="graphic-item item">
             <canvas id="bar" class="chart chart-bar"
               chart-data="bardata" chart-labels="barlabels" chart-series="barseries">
             </canvas>
